test/kobra-code/semantic-errors/bad-return-statement.ks
fn ():
  $ x = 10
end

return x
